2011-12-12 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fix Makefile for httpd for consistency

2011-12-05 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Updated most scripts to be combatible with LFS 7.0.
     See http://wiki.linuxfromscratch.org/blfs/browser/trunk/bootscripts
     for specific changes.

2010-08-25 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Modified the ntp startup script to only run
     nppd -gx

2009-03-02 Randy McMurchy <randy@linuxfromscratch.org>
   * Modified the D-BUS boot script "stop" section so that the PID
     file is removed when the daemon is stopped.

2008-08-12 Thomas Trepl <thomas@linuxfromscratch.org>
   * Fix a mistyped variable name in Samba init script which
     causes the reload action to fail.

2008-03-25 Randy McMurchy <randy@linuxfromscratch.org>
   * Updated the Stunnel init script to reflect that upstream has
     moved the stunnel binary from /usr/sbin to /usr/bin.

2008-03-15 Alexander E. Patrakov <alexander@linuxfromscratch.org>
   * Imported the new pppoe service script from the LiveCD repository.

2008-03-12 Dan Nicholson <dnicholson@linuxfromscratch.org>
   * Revert usage of pid files from a few commits ago except for
     samba, which needs to know the correct process to kill. See
     LFS ticket #2160 and add back these changes when that can be
     depended on.

2008-03-06 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Fixed calls in autofs to echo_failure.

2007-12-21 Dan Nicholson <dnicholson@linuxfromscratch.org>
   * Removed the reload target from the dhcp script since dhcpd
     does not support reloading with SIGHUP.

2007-10-21 Dan Nicholson <dnicholson@linuxfromscratch.org>
   * Changed the gdm, gpm, haldaemon and ntp scripts to reference
     their pid files in /var/run for all operations.

2007-10-21 Dan Nicholson <dnicholson@linuxfromscratch.org>
   * Fixed the samba and sshd scripts to reference the pid files in
     /var/run. This ensures that the correct processes are killed and